Todo completed check

--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,9 @@
         <label for="add-todo-priority">Priority</label>
         <br />
         <select name="add-todo-priority" id="add-todo-priority">
-          <option value="Low">Low</option>
-          <option value="Med">Med</option>
-          <option value="High">High</option>
+          <option value="low">Low</option>
+          <option value="med">Med</option>
+          <option value="high">High</option>
         </select>
         <br />
         <label for="add-todo-notes">Notes</label>
